<resources>
    <string name="app_name">Random User</string>
    <string name="tabUsersTitle">Users</string>
    <string name="tabHistoryTitle">History</string>
    <string name="load_users">Load users</string>
    <string name="user_count_hint">Enter users count to load</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="city">City</string>
    <string name="country">Country</string>
    <string name="user_details">User Details</string>
</resources>