<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_navigation"
    app:startDestination="@id/users">
    <fragment
        android:id="@+id/users"
        android:name="com.android.randomuser.ui.user_list.UserListFragment"
        android:label="@string/tabUsersTitle"
        tools:layout="@layout/fragment_user_list" >

    </fragment>

    <fragment
        android:id="@+id/history"
        android:name="com.android.randomuser.ui.history.HistoryFragment"
        android:label="@string/tabHistoryTitle"
        tools:layout="@layout/fragment_history" >
        </fragment>

    <fragment
        android:id="@+id/userDetails"
        android:name="com.android.randomuser.ui.user_details.UserDetailsFragment"
        android:label="@string/user_details"
        tools:layout="@layout/fragment_user_details">
        <argument
            android:name="userId"
            app:argType="string"
            app:nullable="false" />
    </fragment>
</navigation>